--- a/themes/label-2.yaml
+++ b/themes/label-2.yaml
@@ -3,8 +3,8 @@ global:
     text_visible_admin:                     true
     text_visible_populated_places:          true
     icon_visible_populated_places:          true
-    text_visible_neighbourhoods:            true
-    text_visible_neighbourhoods_e:          true
+    text_visible_neighbourhoods:            false
+    text_visible_neighbourhoods_e:          false
     text_visible_water_labels:              true
     text_visible_roads:                     true
     text_visible_building:                  false     # false for default
@@ -25,9 +25,27 @@ global:
     text_visible_secondary:                 false
     text_visible_tertiary:                  false
     text_visible_minor_road:                false
-    text_visible_island:                    true
+    text_visible_service_road:              false
+    text_visible_island:                    false
     text_visible_aerialway:                 true
     text_visible_airport_gate:              true
-    text_visible_exits:                     true
+    text_visible_exits:                     false
 
     sdk_road_shields:                       false
+
+layers:
+    pois:
+        filter:
+            all:
+                - not: { kind: [building,address,farm,tree,apron,residential,commercial,industrial] }
+                # White list a few kinds to "always" show per the tile zoom inclusion, else test feature's min_zoom
+                #- function() { return feature.min_zoom <= $zoom }
+                - function() { return feature.min_zoom <= ($zoom - 4) }
+
+    places:
+        populated-places:
+            draw:
+                mapzen_icon_library:
+                    buffer: 48px
+                text-blend-order:
+                    buffer: 48px
