--- a/themes/label-3.yaml
+++ b/themes/label-3.yaml
@@ -4,7 +4,7 @@ global:
     text_visible_populated_places:          true
     icon_visible_populated_places:          true
     text_visible_neighbourhoods:            true
-    text_visible_neighbourhoods_e:          true
+    text_visible_neighbourhoods_e:          false
     text_visible_water_labels:              true
     text_visible_roads:                     true
     text_visible_building:                  false     # false for default
@@ -16,7 +16,7 @@ global:
     text_visible_landuse_green:             true
     icon_visible_poi_landuse:               false     #false by default
     text_visible_poi_landuse:               false     #false by default
-    icon_visible_poi_landuse_e:             true
+    icon_visible_poi_landuse_e:             false
     text_visible_landuse_generic:           false     #false by default
     icon_visible_station:                   false     #false by default
     text_visible_station:                   true
@@ -25,9 +25,48 @@ global:
     text_visible_secondary:                 true
     text_visible_tertiary:                  true
     text_visible_minor_road:                true
+    text_visible_service_road:              true
     text_visible_island:                    true
     text_visible_aerialway:                 true
     text_visible_airport_gate:              true
     text_visible_exits:                     true
 
     sdk_road_shields:                       false
+
+layers:
+    pois:
+        filter:
+            all:
+                - not: { kind: [building,address,farm,tree,apron,residential,commercial,industrial] }
+                # White list a few kinds to "always" show per the tile zoom inclusion, else test feature's min_zoom
+                #- function() { return feature.min_zoom <= $zoom }
+                - function() { return feature.min_zoom <= ($zoom - 3) }
+
+    places:
+        populated-places:
+            draw:
+                mapzen_icon_library:
+                    buffer: 42px
+                text-blend-order:
+                    buffer: 42px
+
+        neighbourhoods:
+            filter:
+                $zoom: { min: 16, max: 17 }
+
+    roads:
+        major_road:
+            secondary:
+                labels-secondary:
+                    filter: { $zoom: { min: 18 } }
+            tertiary:
+                labels-tertiary:
+                    filter: { $zoom: { min: 17 } }
+
+        minor_road:
+            labels-minor_road:
+                filter: { $zoom: { min: 17 } }
+
+        service_road:
+            labels-service_road:
+                filter: { $zoom: { min: 18 } }
