--- a/themes/label-4.yaml
+++ b/themes/label-4.yaml
@@ -9,7 +9,7 @@ global:
     text_visible_roads:                     true
     text_visible_building:                  false     # false for default
     text_visible_address:                   false     # false for default
-    icon_visible_landuse_green:             true
+    icon_visible_landuse_green:             false
     icon_size_green:                        [[0, '0px']]                       # 0px for no, default, more  [[13, '14px'], [16, '18px'], [18, '19px']]
     icon_size_green_nationl_park:           [[0, '0px']]          # 0px for no, default, more  [[10, '18px'], [12, '28px'], [13, '36px']]
     icon_size_green_airport:                [[0, '0px']]               # 0px for no, default, more  [[13, '12px'], [14, '12px'], [17, '18px'], [19, '36px']]
@@ -25,9 +25,45 @@ global:
     text_visible_secondary:                 true
     text_visible_tertiary:                  true
     text_visible_minor_road:                true
+    text_visible_service_road:              true
     text_visible_island:                    true
     text_visible_aerialway:                 true
     text_visible_airport_gate:              true
     text_visible_exits:                     true
 
     sdk_road_shields:                       false
+
+layers:
+    pois:
+        filter:
+            all:
+                - not: { kind: [building,address,farm,tree,apron,residential,commercial,industrial] }
+                # White list a few kinds to "always" show per the tile zoom inclusion, else test feature's min_zoom
+                #- function() { return feature.min_zoom <= $zoom }
+                - function() { return feature.min_zoom <= ($zoom - 2) }
+
+    places:
+        populated-places:
+            draw:
+                mapzen_icon_library:
+                    buffer: 24px
+                text-blend-order:
+                    buffer: 24px
+
+        neighbourhoods:
+            filter:
+                $zoom: { min: 13, max: 17 }
+
+    roads:
+        major_road:
+            secondary:
+                labels-secondary:
+                    filter: { $zoom: { min: 16 } }
+
+            tertiary:
+                labels-tertiary:
+                    filter: { $zoom: { min: 16 } }
+
+        minor_road:
+            labels-minor_road:
+                filter: { $zoom: { min: 16 } }
