--- a/tron-style.yaml
+++ b/tron-style.yaml
@@ -37,15 +37,15 @@ import:
 sources:
     mapzen:
         type: MVT
-        url: https://tile.mapzen.com/mapzen/vector/v1/512/all/{z}/{x}/{y}.mvt
+        url: https://tile.nextzen.org/tilezen/vector/v1/512/all/{z}/{x}/{y}.mvt
         url_params:
             api_key: global.sdk_mapzen_api_key
         rasters: [normals-elevation]
         tile_size: 512
-        max_zoom: 16
+        max_zoom: 15
     normals-elevation:
         type: Raster
-        url: https://tile.mapzen.com/mapzen/terrain/v1/512/normal/{z}/{x}/{y}.png
+        url: https://tile.nextzen.org/tilezen/terrain/v1/512/normal/{z}/{x}/{y}.png
         url_params:
             api_key: global.sdk_mapzen_api_key
         tile_size: 512
