sdk key and max_zoom

--- a/tron-style.yaml
+++ b/tron-style.yaml
@@ -39,15 +39,15 @@ sources:
         type: MVT
         url: https://tile.nextzen.org/tilezen/vector/v1/512/all/{z}/{x}/{y}.mvt
         url_params:
-            api_key: global.sdk_mapzen_api_key
+            api_key: global.sdk_api_key
         rasters: [normals-elevation]
         tile_size: 512
-        max_zoom: 15
+        max_zoom: 16
     normals-elevation:
         type: Raster
         url: https://tile.nextzen.org/tilezen/terrain/v1/512/normal/{z}/{x}/{y}.png
         url_params:
-            api_key: global.sdk_mapzen_api_key
+            api_key: global.sdk_api_key
         tile_size: 512
         max_zoom: 14
 
