--- a/tron-style.yaml
+++ b/tron-style.yaml
@@ -22,10 +22,10 @@ import:
     - layers/landuse.yaml
     - layers/landuse-labels.yaml
     - layers/boundaries.yaml
-    - layers/boundaries-labels.yaml
-    - layers/places.yaml
-    - layers/pois.yaml
-    - layers/ux-sdk-overlay.yaml
+    # - layers/boundaries-labels.yaml
+    # - layers/places.yaml
+    # - layers/pois.yaml
+    # - layers/ux-sdk-overlay.yaml
 
     # Icons
     - themes/tron-icons.yaml
