--- a/layers/buildings.yaml
+++ b/layers/buildings.yaml
@@ -25,7 +25,7 @@ layers:
             filter:
                 any:
                     # show footprints for buildings at least one zoom level before they will be extruded
-                    - { $zoom: [14], scale_rank: [0,1,2,3] }
+                    - { $zoom: [14], scale_rank: [0,1,2,3,4] }
 #                    - { $zoom: [14], area: { min: 5000 } }
 #                    - { $zoom: [14], height: { min: 190 } }
 #                    - { $zoom: [14], volume: { min: 150000 } }
@@ -57,12 +57,7 @@ layers:
                 filter:
                     all:
                         - function() { return global.sdk_building_extrude; }
-                        - $zoom: { min: 16 }
-                        - any:
-                            - { $zoom: [16], height: { min: 60 } }
-                            - { $zoom: [16], area: { min: 1200 } }
-                            - { $zoom: [16], volume: { min: 70000 } }
-                            - { $zoom: { min: 17 } }
+                        - $zoom: { min: 13 }
                         - not:
                             - layer: [-1, -2, -3, -4, -5]
                 draw:
@@ -76,7 +71,7 @@ layers:
                         visible: true
                         style: buildings-lns
                         color: [[16,[0.428,0.687,0.717]],[18,global.building_lines_with_or_without_labels]]
-                        width: [[12, .1px], [14, 0.1px], [16, 0.75px], [17, 0.85px], [18, 1.0px]]
+                        width: [[12, .75px], [18, 1.0px]]
                         extrude: global.building_extrude_height
             basement:
                 filter:
@@ -116,7 +111,7 @@ styles:
         blend: add
         shaders:
             defines:
-                WALL_PCT: .85
+                WALL_PCT: .95
                 WALL_HEIGHT: .85
 
     buildings_no_labels:
@@ -133,7 +128,7 @@ styles:
         mix: [geometry-dynamic-width, geometry-dynamic-height]
         shaders:
             defines:
-                ZOOM_START: 16.
+                ZOOM_START: 13.
                 ZOOM_END: 20.
                 WIDTH_MIN: .7
                 WIDTH_MAX: 1.0
