styles w/animation should be explicitly marked as animated

--- a/layers/roads.yaml
+++ b/layers/roads.yaml
@@ -667,6 +667,7 @@ styles:
     runway-dots:
         base: lines
         mix: [lines-dots-glow]
+        animated: true
         shaders:
             defines:
                 DOTS_ANIMATE: color.a *=abs(sin(v_texcoord.y+u_time))*1.0
